# quantum-algorithms-in-action

./: .gitignore  README.md  pyproject.toml
qalgo/: deutsch-jozsa.py  deutsch.py
